Clicking Without Moving Mouse After Dismissing Splash Screen Seems To Be Ignored #36783

Closed
opened 2013-09-20 11:15:29 +02:00 by Lawrence D'Oliveiro · 4 comments

%%%--- Operating System, Graphics card ---
Debian Unstable AMD64, Intel Graphics

- Blender version with error, and version that worked ---

Blender 2.68.5, built from SVN Sunday September 15th.

- Short description of error ---

Clicking to dismiss the splash screen, then clicking again without moving the mouse, causes clicks after the first to be ignored, even if they occur over valid GUI elements.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open a new Blender document. Select “Help” → “Splash Screen”. Move the mouse to, say, the Info Bar, over one of the menu titles. Click once to dismiss the splash screen. Now, WITHOUT MOVING THE MOUSE, try clicking again to bring up the menu. Nothing happens. Move the mouse the least bit, and clicks now work.

Same thing happens with clicks in the window header, Tool Shelf and the Properties Shelf in the 3D View window, but not with the contents of the 3D view itself—this does respond to such clicks. The Properties Window is similarly unresponsive.

This could be a further occurrence of (previously-fixed) bug #36330.

%%%

%%%--- Operating System, Graphics card --- Debian Unstable AMD64, Intel Graphics - Blender version with error, and version that worked --- Blender 2.68.5, built from SVN Sunday September 15th. - Short description of error --- Clicking to dismiss the splash screen, then clicking again without moving the mouse, causes clicks after the first to be ignored, even if they occur over valid GUI elements. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open a new Blender document. Select “Help” → “Splash Screen”. Move the mouse to, say, the Info Bar, over one of the menu titles. Click once to dismiss the splash screen. Now, WITHOUT MOVING THE MOUSE, try clicking again to bring up the menu. Nothing happens. Move the mouse the least bit, and clicks now work. Same thing happens with clicks in the window header, Tool Shelf and the Properties Shelf in the 3D View window, but not with the contents of the 3D view itself—this does respond to such clicks. The Properties Window is similarly unresponsive. This could be a further occurrence of (previously-fixed) bug #36330. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I can confirm that, but is there any other side effect of this?

Although I appreciate the report, I think it may not be worthy the time to tackle this.
(giving that the tiniest mouse movement is enough to 'fix' that)%%%

%%%I can confirm that, but is there any other side effect of this? Although I appreciate the report, I think it may not be worthy the time to tackle this. (giving that the tiniest mouse movement is enough to 'fix' that)%%%

%%%Fix in svn revision.

This sort of subtle UI issue can be quite annoying, especially as this issue wasn't restricted to the splash screen even.%%%

%%%Fix in svn revision. This sort of subtle UI issue can be quite annoying, especially as this issue wasn't restricted to the splash screen even.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36783
No description provided.