Fix #36783: click outside splash screen to close it would not highlight the button under the mouse, and so clicking the button failed without first moving the mouse. Similar issues could happen with popups and switching windows.

The problem is that a notifier was being used to deactivate possible other
activated buttons, but as notifiers are delayed it could undo the correct
activation too. If anyone notices hanging tooltips or other issues after this
fix, please report them.